--- a/index.html
+++ b/index.html
@@ -122,11 +122,7 @@
       <button class="popupBtn" onClick="closePopup()">Close</button>
     </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Umair Alam</a>.
-    </div>
+    <div class="attribution">&copy; Coded by Umair Alam</div>
     <script src="./assets/script/form-validation.js"></script>
   </body>
 </html>
